# paxexpress-cli

./: .gitignore  README.md  generate_api_client.sh  pyoxidizer.bzl  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yaml  windwos-binary.yaml
docs/: releasing.md
pax_express_client/: __init__.py  app.py  cli.py  settings.py  utils.py
pax_express_client/authentication/: cli.py  core.py  models.py
pax_express_client/files/: cli.py  core.py  models.py
pax_express_client/info/: cli.py  core.py
pax_express_client/repositories/: cli.py  core.py  models.py
pax_express_client/versions/: cli.py  core.py  models.py
paxexpress_cli/: __init__.py  cli.py  utils.py
paxexpress_cli/authentication/: cli.py  core.py
paxexpress_cli/devices/: cli.py  core.py  models.py
paxexpress_cli/files/: core.py
paxexpress_cli/repositories/: cli.py  core.py
paxexpress_cli/versions/: cli.py  core.py  models.py
